--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
+  sqflite: ^1.3.0
+  path_provider: ^1.6.7
 
 dev_dependencies:
   flutter_test:
