--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^6.0.3
   sqflite: ^1.3.0
   path_provider: ^1.6.7
+  google_fonts: 1.1.2
 
 dev_dependencies:
   flutter_test:
