--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   sqflite: ^1.3.0
   path_provider: ^1.6.7
   google_fonts: 1.1.2
+  udp: ^5.0.3
 
 dev_dependencies:
   flutter_test:
